# oil-spill-simulation

./: CMakeLists.txt  README.md  Simulation.cpp  Simulation.h  exceptions.h  main.cpp
components/: AdvectionMovementComponent.cpp  AdvectionMovementComponent.h  CurrentComponent.cpp  CurrentComponent.h  DensityUpdateComponent.cpp  DensityUpdateComponent.h  DispersionComponent.cpp  DispersionComponent.h  EmulsificationComponent.cpp  EmulsificationComponent.h  EvaporationComponent.cpp  EvaporationComponent.h  OilPointComponent.cpp  OilPointComponent.h  TemperatureDependency.cpp  TemperatureDependency.h  ViscosityUpdateComponent.cpp  ViscosityUpdateComponent.h
core/: Cell.cpp  Cell.h  CellType.cpp  CellType.h  Configurations.h  EditItem.h  OilComponent.cpp  OilComponent.h  OilPoint.cpp  OilPoint.h  Sea.cpp  Sea.h  Vector2.cpp  Vector2.h
schedulers/: CurrentScheduler.cpp  CurrentScheduler.h  OilScheduler.cpp  OilScheduler.h  Scheduler.cpp  Scheduler.h  SchedulersController.cpp  SchedulersController.h  TemperatureScheduler.cpp  TemperatureScheduler.h  WindScheduler.cpp  WindScheduler.h
statistics/: Statistics.cpp  Statistics.h  StatisticsType.cpp  StatisticsType.h
systems/: ChangeSquareSystem.cpp  ChangeSquareSystem.h  OilPointComponentSystem.cpp  OilPointComponentSystem.h  OilSystem.h  ReEntairedSystem.cpp  ReEntairedSystem.h  SPreadingSystem.cpp  SPreadingSystem.h  TimeCounter.cpp  TimeCounter.h
util/: ArrayReader.cpp  ArrayReader.h
